src/golden/functions/typeerrors/test.golden/badarg.fl
	badarg (String s) = s
	badarg (Number n) = n